Bug 1177587 - Detect use of <img> elements for animation and use sync decoding to reduce flicker. r=tn